# sub360

./: .gitignore  AGENTS.md  GEMINI.md  README.md  Requirements_Specification_sub360_EN.md  aaaa.md  claude.md  dummy_data.json  project.md  pyproject.toml  sub360-view-spec.html
apps/applications/: apps.py  const.py  exceptions.py  filters.py  forms.py  models.py  signals.py  tables.py  tasks.py  urls.py  views.py
apps/authentication/: admin.py  filters.py  forms.py  models.py  signals.py  signup_urls.py  urls.py  views.py
apps/clients/: admin.py  forms.py  models.py  urls.py  views.py
apps/companies/: admin.py  apps.py  const.py  exceptions.py  filters.py  forms.py  models.py  signals.py  tables.py  tasks.py  urls.py  views.py
apps/core/: abstract_forms.py  columns.py  export.py  models.py  renderer.py  urls.py  views.py  widgets.py
apps/documents/: apps.py  const.py  exceptions.py  filters.py  forms.py  models.py  signals.py  tables.py  tasks.py  urls.py  views.py
apps/integrations/: apps.py  const.py  exceptions.py  filters.py  forms.py  signals.py  tables.py  tasks.py  views.py
apps/ratings/: admin.py  (+9 more)
config/: asgi.py  settings.py  urls.py
docs/: Project_Plan_Milestones_sub360_EN.md  Requirements_Specification_sub360_EN.md  sub360-view-spec.html
fixtures/: execution_types.json  sample_data.json
metronic/: apps.html  asides.html  authentication.html  dashboards.html  forms.html  index.html  landing.html  layouts.html  pages.html  toolbars.html  widgets.html
templates/: base.html  dev_index.html  footer.html  header.html  navbar.html  sidebar.html
(+679 files in other folders)
