[project]
name = "sub360"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "django-debug-toolbar>=6.3.0",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "django-tables2>=3.0.0",
    "django-widget-tweaks>=1.5.1",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "django-lumen>=0.2.3",
    "django-schematic>=1.3.14",
    "ruff>=0.15.15",
]
